// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiPageContent accepts panel props 1`] = `
<div
  class="ouiPanel ouiPanel--borderRadiusNone ouiPanel--plain ouiPanel--noShadow ouiPageContent ouiPageContent--borderRadiusNone"
  role="main"
/>
`;

exports[`OuiPageContent horizontalPosition is rendered 1`] = `
<div
  class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPageContent ouiPageContent--horizontalCenter"
  role="main"
/>
`;

exports[`OuiPageContent is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPageContent testClass1 testClass2"
  data-test-subj="test subject string"
  role="main"
/>
`;

exports[`OuiPageContent role can be removed 1`] = `
<div
  class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPageContent"
/>
`;

exports[`OuiPageContent verticalPosition is rendered 1`] = `
<div
  class="ouiPanel ouiPanel--paddingLarge ouiPanel--borderRadiusMedium ouiPanel--plain ouiPanel--hasShadow ouiPageContent ouiPageContent--verticalCenter"
  role="main"
/>
`;
